--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
     "styled-components": "^6.1.1",
-    "styled-reset": "^4.5.1"
+    "styled-reset": "^4.5.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
